for only reading the header once